--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-2": "^6.24.1",
+    "dom4": "^2.1.3",
+    "inputmask": "^4.0.2",
+    "jquery-validation": "^1.18.0",
     "jscs": "^3.0.7",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "npm": "^6.4.0",
